# ImageManager

./: .gitignore  README.en.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
public/: CHANGELOG.md
src/: App.tsx  App.vue  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: ImageLightbox.vue  Onboarding.tsx  Onboarding.vue  OutputOverrides.tsx  Page.tsx  ParamFieldsCard.vue  ParamSourceHeader.vue  PromptHistory.tsx  PromptHistory.vue  ResultsView.tsx  ResultsView.vue  Shell.tsx  Shell.vue  SizeSelector.tsx  SizeSelector.vue  ThemeToggle.vue  TitleBar.tsx  TitleBar.vue  UnconfiguredBanner.vue  WinControls.vue
src/components/history/: EntryCard.vue
src/components/settings/: CollapsibleCard.vue  ConnectionTab.vue  EndpointCard.vue  EndpointDialog.vue  ModelCard.vue  ModelsTab.vue  ParamsTab.vue  PresetCard.vue
src/components/ui/: Combobox.tsx  Hint.tsx  Input.tsx  Select.tsx  Switch.tsx  Textarea.tsx  Toast.tsx
src/composables/: paramOverrides.ts  useEnterAnimation.ts
src/i18n/: en.ts  index.ts  zh.ts
src/pages/: EditPage.tsx  GeneratePage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx
src/router/: index.ts
src/services/: apiClient.ts  apiClientTypes.ts  cacheStore.ts  config.ts  googleClient.ts  history.ts  onboarding.ts  presets.ts  store.ts  updater.ts  version.ts
src/stores/: cache.ts  config.ts  history.ts  onboarding.ts  pendingPrompt.ts  tasks.ts  updates.ts
src/styles/: globals.css
src/views/: CreateView.vue  EditView.vue  GenerateView.vue  HistoryDetailView.vue  HistoryView.vue  HomeView.vue  SettingsView.vue
src_legacy/: App.tsx
src_legacy/components/: Page.tsx  PromptHistory.tsx  ResultsView.tsx  SizeSelector.tsx  UnconfiguredBanner.tsx
src_legacy/components/ui/: Button.tsx  Label.tsx  NumberInput.tsx  Toast.tsx
src_legacy/i18n/: en.ts  zh.ts
src_legacy/pages/: EditPage.tsx  GeneratePage.tsx  HomePage.tsx  SettingsPage.tsx
src_legacy/services/: config.ts  googleClient.ts  imageCache.ts  sizeCalc.ts  updater.ts  version.ts
src_legacy/styles/: globals.css
