[package]
name = "imagemanager"
# Cargo metadata only — does NOT control the bundled app version.
# Source of truth is `../package.json` (read by tauri.conf.json's
# `"version": "../package.json"`). Sync this if you want
# `cargo metadata` / `CARGO_PKG_VERSION` to match, but it's not required
# for the Tauri bundle / installer / About dialog.
version = "0.1.0"
description = "OpenAI-compatible image API desktop client"
authors = ["EggFine"]
edition = "2021"

[lib]
name = "imagemanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
