[package]
name = "imagemanager"
# Cargo metadata only — does NOT control the bundled app version.
# Source of truth is `../package.json`, pulled in by tauri.conf.json's
# `"version": "../package.json"` field. The Tauri bundle, installer
# metadata, About dialog, updater feed, etc. all derive from there.
#
# We intentionally don't bump this on every release — Cargo can't read
# package.json natively, and the only consumers of this value
# (`cargo metadata`, the `CARGO_PKG_VERSION` macro) aren't used by
# either the Rust code in this crate or any release tooling. Leaving
# it at a stable sentinel avoids a second place to forget to update.
version = "1.0.0"
description = "OpenAI-compatible image API desktop client"
authors = ["EggFine"]
edition = "2021"

[lib]
name = "imagemanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
